[workspace]
resolver = "2"
members = ["eio-okta-sync", "eio-okta-api", "eio-okta-client", "eio-okta-data"]

[workspace.package]
rust-version = "1.91"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rancher-eio/okta-sync"
repository = "https://github.com/rancher-eio/okta-sync"
authors = ["Chris Olstrom <chris@olstrom.com>"]
keywords = ["EIO"]

[workspace.dependencies]
# Internal Crates
eio-okta-api = { path = "eio-okta-api", version = "0.6.0" }
eio-okta-client = { path = "eio-okta-client", version = "0.4.1" }
eio-okta-data = { path = "eio-okta-data", version = "0.5.0" }

# Unmerged Upstream Patches
comparable = { version = "0.5.4", git = "https://github.com/jwiegley/comparable.git", rev = "refs/pull/5/head", default-features = false, features = [
  "derive",
] }

# Dependencies
bon = { version = "3.8.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.45", default-features = false }
console = { version = "0.16.0", default-features = false }
divan = { version = "0.1.21", default-features = false }
educe = { version = "0.6.0", default-features = false }
email_address = { version = "0.2.9", default-features = false }
fancy-regex = { version = "0.16.1", default-features = false }
http = { version = "1.3.1", default-features = false }
indexmap = { version = "2.10.0", default-features = false }
inquire = { version = "0.9.1", default-features = false }
iri-string = { version = "0.7.8", default-features = false }
itertools = { version = "0.14.0", default-features = false }
mediatype = { version = "0.21.0", default-features = false }
miette = { version = "7.6.0", default-features = false }
parse_link_header = { version = "0.4.0", default-features = false }
petgraph = { version = "0.8.2", default-features = false }
proptest = { version = "1.7.0", default-features = false }
rand = { version = "0.9.2", default-features = false }
schemars = { version = "1.0.4", default-features = false }
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.142", default-features = false }
serde_qs = { version = "0.15.0", default-features = false }
struct-patch = { version = "0.10.3" }
strum = { version = "0.27.2" }
tar = { version = "0.4.44", default-features = false }
tokio = { version = "1.47.1", default-features = false }
update-informer = { version = "1.3.0", default-features = false }
ureq = { version = "2.12.1", default-features = false }

# empty default features
arbitrary = { version = "1.4.1", default-features = false }
camino = { version = "1.1.11", default-features = false }
constcat = { version = "0.6.1", default-features = false }
fake = { version = "4.4.0", default-features = false }
fs-err = { version = "3.1.1", default-features = false }
headers = { version = "0.4.1", default-features = false }
macro_rules_attribute = { version = "0.2.2", default-features = false }
proptest-derive = { version = "0.7.0", default-features = false }
serde_yml = { version = "0.0.12", default-features = false }
validator = { version = "0.20.0", default-features = false }

# no features
heck = "0.5.0"
humantime = "2.2.0"
humantime-serde = "1.1.1"
remain = "0.2.15"
scim_proto = "1.7.1"
serde_urlencoded = "0.7.1"
test-strategy = "0.4.3"
thiserror = "2.0.14"

[profile.dev]
split-debuginfo = "packed"
opt-level = 0
codegen-units = 256
lto = false

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
strip = true

[workspace.metadata.cargo-shear]
ignored = ["humantime-serde"]
