[package]
name = "eio-okta-sync"
version = "0.15.0"
description = "a VERY specific way to turn Okta Users and Groups into GitHub Members and Teams"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
eio-okta-api.workspace = true
eio-okta-client.workspace = true
eio-okta-data.workspace = true

constcat.workspace = true
email_address.workspace = true
fs-err.workspace = true
heck.workspace = true
http.workspace = true
humantime.workspace = true
paste.workspace = true
remain.workspace = true
serde_yml.workspace = true
tar.workspace = true
thiserror.workspace = true

bon = { workspace = true, features = ["alloc", "std"] }
bounded-integer = { workspace = true, features = ["serde1"] }
camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true, features = ["serde", "std"] }
clap = { workspace = true, features = [
  "color",
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "string",
  "suggestions",
  "unicode",
  "usage",
  "wrap_help",
] }
console = { workspace = true, features = [
  "ansi-parsing",
  "std",
  "unicode-width",
] }
educe = { workspace = true, features = ["Clone", "Debug", "Eq", "PartialEq"] }
fancy-regex = { workspace = true, features = ["perf", "std", "unicode"] }
indexmap = { workspace = true, features = ["serde"] }
iri-string = { workspace = true, features = ["serde"] }
inquire = { workspace = true, features = [
  "crossterm",
  "fuzzy",
  "macros",
  "one-liners",
] }
itertools = { workspace = true, features = ["use_std"] }
monostate = { workspace = true }
miette = { workspace = true, features = ["derive", "fancy", "serde"] }
petgraph = { workspace = true, features = ["graphmap", "serde-1", "std"] }
semver = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
update-informer = { workspace = true, features = [
  "crates",
  "github",
  "rustls-tls",
  "ureq",
] }
uuid = { workspace = true, features = ["std", "serde"] }

authentik-client = { version = "2026.5.0", default-features = false, features = [
  "rustls",
] }
erased-serde = "0.4.10"
graphql_client = "0.16.0"
interim = { version = "0.2.1", features = ["chrono_0_4"] }
nutype = { version = "0.7.0", features = ["serde"] }
octocrab = "0.51.0"
rand.workspace = true
secrecy = "0.10.3"

[[bench]]
name = "query_string"
harness = false

[dev-dependencies]
divan.workspace = true
